<resources>
    <string name="app_name">tictactoegame</string>
    <string name="title_new_game">Новая игра</string>
    <string name="title_settings">Настройки</string>
    <string name="title_continue_game">Продолжить игру</string>
    <string name="vertical">Ряд по вертикали</string>
    <string name="horizontal">Ряд по горизонтали</string>
    <string name="diagonal">Ряд по диагонали</string>
    <string name="difficult">Легко</string>
    <string name="rules">Правила игры</string>
    <string name="namedif">Сложность</string>
    <string name="sound">Звук</string>
    <string name="settings">Настройки</string>
    <string name="popup_save">Сохранить и выйти</string>
    <string name="popup_continue">Продолжить игру</string>
    <string name="popup_settings">Настройки</string>
    <string name="popup_menu">Меню</string>

    <string name="preference_file_key">my.tic_tak_toe.file_key</string>
    <string name="settings_back">Назад</string>
    <string-array name="game_level">
        <item>ЛЕГКО</item>
        <item>НОРМАЛЬНО</item>
        <item>СЛОЖНО</item>

    </string-array>
</resources>